Bug 453696 - After changing screen resolution, the output is not scaled correctly until kwin_x11 is restarted
Summary: After changing screen resolution, the output is not scaled correctly until kw...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: xrandr (other bugs)
Version First Reported In: 5.24.90
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 454186 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-12 11:54 UTC by Fushan Wen
Modified: 2022-05-24 13:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:
qydwhotmail: X11+


Attachments
1280x720 to 1920x1080.png (265.77 KB, image/png)
2022-05-12 11:56 UTC, Fushan Wen
Details
1920x1080 to 1280x720.png (71.61 KB, image/png)
2022-05-12 11:57 UTC, Fushan Wen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-05-12 11:54:12 UTC
SUMMARY
After I change the screen resolution from 1280x720 to 1920x1080 (or vice versa), the visible output size is not changed accordingly.

STEPS TO REPRODUCE
1. Change the screen resolution from 1920x1080 to 1280x720

OBSERVED RESULT
The visible output size is old, and the whole screen is blurry. For example, the size of the visible area is still 1280x720 but scaled to 1920x1080, and the remaining area is outside of the screen.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
X11

Information for package kwin5:
------------------------------
Repository     : @System
Name           : kwin5
Version        : 5.24.80git.20220510T194236~d83121db-ku.113.1
Arch           : x86_64
Vendor         : obs://build.opensuse.org/KDE:Unstable
Installed Size : 16.7 MiB
Installed      : Yes
Status         : up-to-date
Source package : kwin5-5.24.80git.20220510T194236~d83121db-ku.113.1.src
Upstream URL   : http://www.kde.org
Summary        : KDE Window Manager
Description    : 
    KWin is the window manager of the K desktop environment.
Comment 1 Fushan Wen 2022-05-12 11:56:43 UTC
Created attachment 148759 [details]
1280x720 to 1920x1080.png
Comment 2 Fushan Wen 2022-05-12 11:57:08 UTC
Created attachment 148760 [details]
1920x1080 to 1280x720.png
Comment 3 Bug Janitor Service 2022-05-24 07:48:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2454
Comment 4 Zamundaaa 2022-05-24 09:34:10 UTC
*** Bug 454186 has been marked as a duplicate of this bug. ***
Comment 5 Vlad Zahorodnii 2022-05-24 11:13:57 UTC
Git commit 46554c0df4a8620fceae1ddf53dec8a1eba14d1b by Vlad Zahorodnii.
Committed on 24/05/2022 at 11:13.
Pushed by vladz into branch 'Plasma/5.25'.

backends/x11: Ensure that Output::geometryChanged is emitted when modes change
Tested-by: Merge Service <https://invent.kde.org/plasma/kwin/-/merge_requests/2454>
Part-of: <https://invent.kde.org/plasma/kwin/-/merge_requests/2454>


(cherry picked from commit 8b644fee5833205fc2c5f0a921cea4c33d4e3231)

M  +5    -2    src/backends/x11/standalone/x11_output.cpp
M  +1    -0    src/output.cpp

https://invent.kde.org/plasma/kwin/commit/46554c0df4a8620fceae1ddf53dec8a1eba14d1b